Se acomodo para github pages

--- a/nosotros.html
+++ b/nosotros.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="/assets/styles/resets.css">
-    <link rel="stylesheet" href="/assets/styles/variables.css">
-    <link rel="stylesheet" href="/assets/styles/shared.css">
-    <link rel="stylesheet" href="/assets/styles/header.css">
-    <link rel="stylesheet" href="/assets/styles/footer.css">
-    <link rel="stylesheet" href="/assets/styles/nosotros.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/nosotros.css">
 </head>
 
 <body>
     <header>
         <div class="header__container">
             <div class="header__logo">
-                <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+                <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
                 <h2>PIXELSGAMEPTY</h2>
             </div>
             <ul class="header__menu">
@@ -41,7 +41,7 @@
         </div>
     </header>
     <main>
-        <img src="/assets/img/logo.png" />
+        <img src="/globalizacion-semestral/assets/img/logo.png" />
         <h1>PIXELS GAME PTY</h1>
         <h3>¿Quienes somos y que hacemos?</h3>
         <p>
@@ -63,7 +63,7 @@
 
         <div class="colaborador">
             <h2>Lorena Oriol</h2>
-            <img src="/assets/img/nosotros/LORENAORIOL.jpg" width="250" height="250" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/LORENAORIOL.jpg" width="250" height="250" />
             <p>
                 Me llamo Lorena Oriol, tengo 18 años, me encanta viajar, amo a los gatos y perros, soy fan de los
                 videojuegos dentro de estos; Fortnite, COD, the Last of Us, Need For Speed,
@@ -73,7 +73,7 @@
         </div>
         <div class="colaborador">
             <h2>Lorena Oriol</h2>
-            <img src="/assets/img/nosotros/JACKELINEMARTINEZ.jpg" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/JACKELINEMARTINEZ.jpg" />
             <p>
                 Soy Jackeline Martinez, tengo 21 años, soy una persona tranquila y sociable, tengo como hobby la
                 lectura. Me gustar jugar COD mobile, tengo gran interés en el área IA.
@@ -82,7 +82,7 @@
         </div>
         <div class="colaborador">
             <h2>Brandan Olivarren</h2>
-            <img src="/assets/img/nosotros/BRANDANOLIVARREN.jpg" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/BRANDANOLIVARREN.jpg" />
             <p>
                 Mi nombre es Brandan Olivarren tengo 19 años, soy una persona amable y ayudar en lo posible aunque
                 sea algo tímido, entre mis gustos están leer comics y libros, ver películas series o animes y jugar
@@ -92,7 +92,7 @@
         </div>
         <div class="colaborador">
             <h2>Julián Cipaguata</h2>
-            <img src="/assets/img/nosotros/JULIAN.jpg" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/JULIAN.jpg" />
             <p>
                 Me llamo Julián Cipagauta, tengo 24 años, nací en Colombia y llevo 10 años viviendo en Panamá. Me
                 gusta mucho viajar, hacer senderismo, conducir, jugar videojuegos y programar.
@@ -101,7 +101,7 @@
         </div>
         <div class="colaborador">
             <h2>Lucia Tapia</h2>
-            <img src="/assets/img/nosotros/LUCIATAPIA.jpg" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/LUCIATAPIA.jpg" />
             <p>
                 Soy Lucia Tapia, mi hobbie favorito es dibujar, intento aprender nuevas técnicas de dibujo cada día
                 y también me gustaría crear programas propios algún día.
@@ -110,7 +110,7 @@
         </div>
         <div class="colaborador">
             <h2>James Gay</h2>
-            <img src="/assets/img/nosotros/JAMESGAY.jpg" />
+            <img src="/globalizacion-semestral/assets/img/nosotros/JAMESGAY.jpg" />
             <p>
                 Mi nombre es James Gay, no hay mucho de mí. Las únicas actividades que
                 realizo consisten en jugar videojuegos y ver anime.
@@ -125,20 +125,20 @@
     <footer>
         <div class="footer__container">
             <div class="footer__branding">
-                <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+                <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
                 <div class="info">
                     <h2>PixelsGamePTY</h2>
                     <ul>
                         <li>
-                            <img src="/assets/img/icons/whatsapp.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
                             <h4>+(507) 6789-1234</h4>
                         </li>
                         <li>
-                            <img src="/assets/img/icons/instagram.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
                             <h4>@pixelsgamepty</h4>
                         </li>
                         <li>
-                            <img src="/assets/img/icons/tiktok.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
                             <h4>@pixelsgamepty</h4>
                         </li>
                     </ul>
