--- a/blog.html
+++ b/blog.html
@@ -6,19 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <link rel="stylesheet" href="/assets/styles/resets.css">
-  <link rel="stylesheet" href="/assets/styles/variables.css">
-  <link rel="stylesheet" href="/assets/styles/shared.css">
-  <link rel="stylesheet" href="/assets/styles/header.css">
-  <link rel="stylesheet" href="/assets/styles/footer.css">
-  <link rel="stylesheet" href="/assets/styles/blog.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/blog.css">
 </head>
 
 <body>
   <header>
     <div class="header__container">
       <div class="header__logo">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
@@ -75,20 +75,20 @@
   <footer>
     <div class="footer__container">
       <div class="footer__branding">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
         <div class="info">
           <h2>PixelsGamePTY</h2>
           <ul>
             <li>
-              <img src="/assets/img/icons/whatsapp.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
               <h4>+(507) 6789-1234</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/instagram.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/tiktok.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
           </ul>
