--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="/assets/styles/resets.css">
-    <link rel="stylesheet" href="/assets/styles/variables.css">
-    <link rel="stylesheet" href="/assets/styles/shared.css">
-    <link rel="stylesheet" href="/assets/styles/header.css">
-    <link rel="stylesheet" href="/assets/styles/footer.css">
-    <link rel="stylesheet" href="/assets/styles/slider.css">
-    <link rel="stylesheet" href="/assets/styles/index.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/slider.css">
+    <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/index.css">
 </head>
 
 <body>
     <header>
         <div class="header__container">
             <div class="header__logo">
-                <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+                <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
                 <h2>PIXELSGAMEPTY</h2>
             </div>
             <ul class="header__menu">
@@ -43,7 +43,7 @@
     </header>
     <div class="banner">
 
-        <img src="/assets/img/hero.png" alt="banner">
+        <img src="/globalizacion-semestral/assets/img/hero.png" alt="banner">
 
     </div>
     <main>
@@ -65,7 +65,7 @@
                         <div>
                             <a href="/productos/Producto_4(Iphone).html">
                                 <picture>
-                                    <img src="/assets/img/productos/1.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -74,7 +74,7 @@
                         <div>
                             <a href="/productos/Producto_5(nintendo).html">
                                 <picture>
-                                    <img src="/assets/img/productos/2.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -83,7 +83,7 @@
                         <div>
                             <a href="/productos/Producto_1(Audifonos).html">
                                 <picture>
-                                    <img src="/assets/img/productos/3.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -92,7 +92,7 @@
                         <div>
                             <a href="/productos/Producto_2(samsumg).html">
                                 <picture>
-                                    <img src="/assets/img/productos/4.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -101,7 +101,7 @@
                         <div>
                             <a href="/productos/Producto_3(PS4).html">
                                 <picture>
-                                    <img src="/assets/img/productos/5.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -110,7 +110,7 @@
                         <div>
                             <a href="/productos/Producto_6(Laptop).html">
                                 <picture>
-                                    <img src="/assets/img/productos/6.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -119,7 +119,7 @@
                         <div>
                             <a href="/productos/Producto_4(Iphone).html">
                                 <picture>
-                                    <img src="/assets/img/productos/1.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -128,7 +128,7 @@
                         <div>
                             <a href="/productos/Producto_5(nintendo).html">
                                 <picture>
-                                    <img src="/assets/img/productos/2.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -137,7 +137,7 @@
                         <div>
                             <a href="/productos/Producto_1(Audifonos).html">
                                 <picture>
-                                    <img src="/assets/img/productos/3.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -146,7 +146,7 @@
                         <div>
                             <a href="/productos/Producto_2(samsumg).html">
                                 <picture>
-                                    <img src="/assets/img/productos/4.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -155,7 +155,7 @@
                         <div>
                             <a href="/productos/Producto_3(PS4).html">
                                 <picture>
-                                    <img src="/assets/img/productos/5.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -164,7 +164,7 @@
                         <div>
                             <a href="/productos/Producto_6(Laptop).html">
                                 <picture>
-                                    <img src="/assets/img/productos/6.jpeg" alt="Image">
+                                    <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                                 </picture>
                             </a>
                         </div>
@@ -186,20 +186,20 @@
     <footer>
         <div class="footer__container">
             <div class="footer__branding">
-                <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+                <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
                 <div class="info">
                     <h2>PixelsGamePTY</h2>
                     <ul>
                         <li>
-                            <img src="/assets/img/icons/whatsapp.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
                             <h4>+(507) 6789-1234</h4>
                         </li>
                         <li>
-                            <img src="/assets/img/icons/instagram.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
                             <h4>@pixelsgamepty</h4>
                         </li>
                         <li>
-                            <img src="/assets/img/icons/tiktok.svg" alt="">
+                            <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
                             <h4>@pixelsgamepty</h4>
                         </li>
                     </ul>
@@ -232,7 +232,7 @@
             </p>
         </div>
     </footer>
-    <script defer src="/assets/js/slider.js"></script>
+    <script defer src="/globalizacion-semestral/assets/js/slider.js"></script>
 </body>
 
 </html>
