--- a/productos.html
+++ b/productos.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos</title>
-  <link rel="stylesheet" href="/assets/styles/resets.css">
-  <link rel="stylesheet" href="/assets/styles/variables.css">
-  <link rel="stylesheet" href="/assets/styles/shared.css">
-  <link rel="stylesheet" href="/assets/styles/header.css">
-  <link rel="stylesheet" href="/assets/styles/footer.css">
-  <link rel="stylesheet" href="/assets/styles/slider.css">
-  <link rel="stylesheet" href="/assets/styles/productos.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/slider.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/productos.css">
 
 </head>
 
@@ -22,7 +22,7 @@
   <header>
     <div class="header__container">
       <div class="header__logo">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
@@ -63,7 +63,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -72,7 +72,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -81,7 +81,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -90,7 +90,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -99,7 +99,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -108,7 +108,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -117,7 +117,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -126,7 +126,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -135,7 +135,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -144,7 +144,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -153,7 +153,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -162,7 +162,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -184,20 +184,20 @@
   <footer>
     <div class="footer__container">
       <div class="footer__branding">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
         <div class="info">
           <h2>PixelsGamePTY</h2>
           <ul>
             <li>
-              <img src="/assets/img/icons/whatsapp.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
               <h4>+(507) 6789-1234</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/instagram.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/tiktok.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
           </ul>
@@ -231,7 +231,7 @@
     </div>
   </footer>
 
-  <script defer src="/assets/js/slider.js"></script>
+  <script defer src="/globalizacion-semestral/assets/js/slider.js"></script>
 </body>
 
 </html>
