--- a/productos/Producto_1(Audifonos).html
+++ b/productos/Producto_1(Audifonos).html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audífonos</title>
-  <link rel="stylesheet" href="/assets/styles/resets.css">
-  <link rel="stylesheet" href="/assets/styles/variables.css">
-  <link rel="stylesheet" href="/assets/styles/shared.css">
-  <link rel="stylesheet" href="/assets/styles/header.css">
-  <link rel="stylesheet" href="/assets/styles/footer.css">
-  <link rel="stylesheet" href="/assets/styles/slider.css">
-  <link rel="stylesheet" href="/assets/styles/products.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/slider.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/products.css">
 
 </head>
 
@@ -21,7 +21,7 @@
   <header>
     <div class="header__container">
       <div class="header__logo">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
@@ -47,7 +47,7 @@
   <main>
     <div class="product">
       <div class="product__image">
-        <img src="/assets/img/productos/Audifonos.jpeg" alt="PRODUCTO A MOSTRAR">
+        <img src="/globalizacion-semestral/assets/img/productos/Audifonos.jpeg" alt="PRODUCTO A MOSTRAR">
       </div>
       <div class="product__info">
         <h1>Audífonos Gamer</h1>
@@ -85,7 +85,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -94,7 +94,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -103,7 +103,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -112,7 +112,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -121,7 +121,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -130,7 +130,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -139,7 +139,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -148,7 +148,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -157,7 +157,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -166,7 +166,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -175,7 +175,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -184,7 +184,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -207,20 +207,20 @@
   <footer>
     <div class="footer__container">
       <div class="footer__branding">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
         <div class="info">
           <h2>PixelsGamePTY</h2>
           <ul>
             <li>
-              <img src="/assets/img/icons/whatsapp.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
               <h4>+(507) 6789-1234</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/instagram.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/tiktok.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
           </ul>
@@ -254,7 +254,7 @@
     </div>
   </footer>
 
-  <script defer src="/assets/js/slider.js"></script>
+  <script defer src="/globalizacion-semestral/assets/js/slider.js"></script>
 
 
 </body>
