--- a/productos/Producto_4(Iphone).html
+++ b/productos/Producto_4(Iphone).html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iphone 7</title>
-  <link rel="stylesheet" href="/assets/styles/resets.css">
-  <link rel="stylesheet" href="/assets/styles/variables.css">
-  <link rel="stylesheet" href="/assets/styles/shared.css">
-  <link rel="stylesheet" href="/assets/styles/header.css">
-  <link rel="stylesheet" href="/assets/styles/footer.css">
-  <link rel="stylesheet" href="/assets/styles/slider.css">
-  <link rel="stylesheet" href="/assets/styles/products.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/resets.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/variables.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/shared.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/header.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/footer.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/slider.css">
+  <link rel="stylesheet" href="/globalizacion-semestral/assets/styles/products.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
   <header>
     <div class="header__container">
       <div class="header__logo">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY">
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
@@ -46,7 +46,7 @@
   <main>
     <div class="product">
       <div class="product__image">
-        <img src="/assets/img/productos/Iphone7.jpeg" alt="PRODUCTO A MOSTRAR">
+        <img src="/globalizacion-semestral/assets/img/productos/Iphone7.jpeg" alt="PRODUCTO A MOSTRAR">
       </div>
       <div class="product__info">
         <h1>Iphone7</h1>
@@ -82,7 +82,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -91,7 +91,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -100,7 +100,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -109,7 +109,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -118,7 +118,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -127,7 +127,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -136,7 +136,7 @@
             <div>
               <a href="/productos/Producto_4(Iphone).html">
                 <picture>
-                  <img src="/assets/img/productos/1.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -145,7 +145,7 @@
             <div>
               <a href="/productos/Producto_5(nintendo).html">
                 <picture>
-                  <img src="/assets/img/productos/2.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -154,7 +154,7 @@
             <div>
               <a href="/productos/Producto_1(Audifonos).html">
                 <picture>
-                  <img src="/assets/img/productos/3.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -163,7 +163,7 @@
             <div>
               <a href="/productos/Producto_2(samsumg).html">
                 <picture>
-                  <img src="/assets/img/productos/4.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -172,7 +172,7 @@
             <div>
               <a href="/productos/Producto_3(PS4).html">
                 <picture>
-                  <img src="/assets/img/productos/5.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -181,7 +181,7 @@
             <div>
               <a href="/productos/Producto_6(Laptop).html">
                 <picture>
-                  <img src="/assets/img/productos/6.jpeg" alt="Image">
+                  <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
               </a>
             </div>
@@ -204,20 +204,20 @@
   <footer>
     <div class="footer__container">
       <div class="footer__branding">
-        <img src="/assets/img/logo.png" alt="PixelsGamePTY Logo">
+        <img src="/globalizacion-semestral/assets/img/logo.png" alt="PixelsGamePTY Logo">
         <div class="info">
           <h2>PixelsGamePTY</h2>
           <ul>
             <li>
-              <img src="/assets/img/icons/whatsapp.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/whatsapp.svg" alt="">
               <h4>+(507) 6789-1234</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/instagram.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/instagram.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
             <li>
-              <img src="/assets/img/icons/tiktok.svg" alt="">
+              <img src="/globalizacion-semestral/assets/img/icons/tiktok.svg" alt="">
               <h4>@pixelsgamepty</h4>
             </li>
           </ul>
@@ -250,7 +250,7 @@
       </p>
     </div>
   </footer>
-  <script defer src="/assets/js/slider.js"></script>
+  <script defer src="/globalizacion-semestral/assets/js/slider.js"></script>
 
 </body>
 
