Arregle los links

--- a/blog.html
+++ b/blog.html
@@ -22,19 +22,19 @@
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
-        <li><a href="/">
+        <li><a href="/globalizacion-semestral/">
             Inicio
           </a></li>
-        <li><a href="/nosotros.html">
+        <li><a href="/globalizacion-semestral/nosotros.html">
             Nosotros
           </a></li>
-        <li><a href="/productos.html">
+        <li><a href="/globalizacion-semestral/productos.html">
             Productos
           </a></li>
         <li><a class='active' href="/blog.html">
             Blog
           </a></li>
-        <li><a href="/contacto.html">
+        <li><a href="/globalizacion-semestral/contacto.html">
             Contáctenos
           </a></li>
       </ul>
@@ -97,19 +97,19 @@
       <div class="footer__menu">
         <h3>Menú</h3>
         <ul>
-          <li><a href="/">
+          <li><a href="/globalizacion-semestral/">
               Inicio
             </a></li>
-          <li><a href="/nosotros.html">
+          <li><a href="/globalizacion-semestral/nosotros.html">
               Nosotros
             </a></li>
-          <li><a href="/productos.html">
+          <li><a href="/globalizacion-semestral/productos.html">
               Productos
             </a></li>
           <li><a class='active' href="/blog.html">
               Blog
             </a></li>
-          <li><a href="/contacto.html">
+          <li><a href="/globalizacion-semestral/contacto.html">
               Contáctenos
             </a></li>
         </ul>
