--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <li><a class='active' href="/">
                         Inicio
                     </a></li>
-                <li><a href="/nosotros.html">
+                <li><a href="/globalizacion-semestral/nosotros.html">
                         Nosotros
                     </a></li>
-                <li><a href="/productos.html">
+                <li><a href="/globalizacion-semestral/productos.html">
                         Productos
                     </a></li>
-                <li><a href="/blog.html">
+                <li><a href="/globalizacion-semestral/blog.html">
                         Blog
                     </a></li>
-                <li><a href="/contacto.html">
+                <li><a href="/globalizacion-semestral/contacto.html">
                         Contáctenos
                     </a></li>
             </ul>
@@ -63,7 +63,7 @@
                 <div class="slick-track" id="track">
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_4(Iphone).html">
+                            <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                                 </picture>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_5(nintendo).html">
+                            <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                                 </picture>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_1(Audifonos).html">
+                            <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                                 </picture>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_2(samsumg).html">
+                            <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                                 </picture>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_3(PS4).html">
+                            <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                                 </picture>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_6(Laptop).html">
+                            <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                                 </picture>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_4(Iphone).html">
+                            <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                                 </picture>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_5(nintendo).html">
+                            <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                                 </picture>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_1(Audifonos).html">
+                            <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                                 </picture>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_2(samsumg).html">
+                            <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                                 </picture>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_3(PS4).html">
+                            <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                                 </picture>
@@ -162,7 +162,7 @@
                     </div>
                     <div class="slick">
                         <div>
-                            <a href="/productos/Producto_6(Laptop).html">
+                            <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                                 <picture>
                                     <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                                 </picture>
@@ -211,16 +211,16 @@
                     <li><a class='active' href="/">
                             Inicio
                         </a></li>
-                    <li><a href="/nosotros.html">
+                    <li><a href="/globalizacion-semestral/nosotros.html">
                             Nosotros
                         </a></li>
-                    <li><a href="/productos.html">
+                    <li><a href="/globalizacion-semestral/productos.html">
                             Productos
                         </a></li>
-                    <li><a href="/blog.html">
+                    <li><a href="/globalizacion-semestral/blog.html">
                             Blog
                         </a></li>
-                    <li><a href="/contacto.html">
+                    <li><a href="/globalizacion-semestral/contacto.html">
                             Contáctenos
                         </a></li>
                 </ul>
