--- a/nosotros.html
+++ b/nosotros.html
@@ -22,19 +22,19 @@
                 <h2>PIXELSGAMEPTY</h2>
             </div>
             <ul class="header__menu">
-                <li><a href="/">
+                <li><a href="/globalizacion-semestral/">
                         Inicio
                     </a></li>
                 <li><a class='active' href="/nosotros.html">
                         Nosotros
                     </a></li>
-                <li><a href="/productos.html">
+                <li><a href="/globalizacion-semestral/productos.html">
                         Productos
                     </a></li>
-                <li><a href="/blog.html">
+                <li><a href="/globalizacion-semestral/blog.html">
                         Blog
                     </a></li>
-                <li><a href="/contacto.html">
+                <li><a href="/globalizacion-semestral/contacto.html">
                         Contáctenos
                     </a></li>
             </ul>
@@ -147,19 +147,19 @@
             <div class="footer__menu">
                 <h3>Menú</h3>
                 <ul>
-                    <li><a href="/">
+                    <li><a href="/globalizacion-semestral/">
                             Inicio
                         </a></li>
                     <li><a class='active' href="/nosotros.html">
                             Nosotros
                         </a></li>
-                    <li><a href="/productos.html">
+                    <li><a href="/globalizacion-semestral/productos.html">
                             Productos
                         </a></li>
-                    <li><a href="/blog.html">
+                    <li><a href="/globalizacion-semestral/blog.html">
                             Blog
                         </a></li>
-                    <li><a href="/contacto.html">
+                    <li><a href="/globalizacion-semestral/contacto.html">
                             Contáctenos
                         </a></li>
                 </ul>
