--- a/productos.html
+++ b/productos.html
@@ -26,19 +26,19 @@
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
-        <li><a href="/">
+        <li><a href="/globalizacion-semestral/">
             Inicio
           </a></li>
-        <li><a href="/nosotros.html">
+        <li><a href="/globalizacion-semestral/nosotros.html">
             Nosotros
           </a></li>
         <li><a class='active' href="/productos.html">
             Productos
           </a></li>
-        <li><a href="/blog.html">
+        <li><a href="/globalizacion-semestral/blog.html">
             Blog
           </a></li>
-        <li><a href="/contacto.html">
+        <li><a href="/globalizacion-semestral/contacto.html">
             Contáctenos
           </a></li>
       </ul>
@@ -61,7 +61,7 @@
         <div class="slick-track" id="track">
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -70,7 +70,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -79,7 +79,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -88,7 +88,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -97,7 +97,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -106,7 +106,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -115,7 +115,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -124,7 +124,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -133,7 +133,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -142,7 +142,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -151,7 +151,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -160,7 +160,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -206,19 +206,19 @@
       <div class="footer__menu">
         <h3>Menú</h3>
         <ul>
-          <li><a href="/">
+          <li><a href="/globalizacion-semestral/">
               Inicio
             </a></li>
-          <li><a href="/nosotros.html">
+          <li><a href="/globalizacion-semestral/nosotros.html">
               Nosotros
             </a></li>
           <li><a class='active' href="/productos.html">
               Productos
             </a></li>
-          <li><a href="/blog.html">
+          <li><a href="/globalizacion-semestral/blog.html">
               Blog
             </a></li>
-          <li><a href="/contacto.html">
+          <li><a href="/globalizacion-semestral/contacto.html">
               Contáctenos
             </a></li>
         </ul>
