--- a/productos/Producto_1(Audifonos).html
+++ b/productos/Producto_1(Audifonos).html
@@ -25,19 +25,19 @@
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
-        <li><a href="/">
+        <li><a href="/globalizacion-semestral/">
             Inicio
           </a></li>
-        <li><a href="/nosotros.html">
+        <li><a href="/globalizacion-semestral/nosotros.html">
             Nosotros
           </a></li>
-        <li><a href="/productos.html">
+        <li><a href="/globalizacion-semestral/productos.html">
             Productos
           </a></li>
-        <li><a href="/blog.html">
+        <li><a href="/globalizacion-semestral/blog.html">
             Blog
           </a></li>
-        <li><a href="/contacto.html">
+        <li><a href="/globalizacion-semestral/contacto.html">
             Contáctenos
           </a></li>
       </ul>
@@ -83,7 +83,7 @@
         <div class="slick-track" id="track">
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -92,7 +92,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -101,7 +101,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -110,7 +110,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -119,7 +119,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -128,7 +128,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -137,7 +137,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -146,7 +146,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -155,7 +155,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -164,7 +164,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -173,7 +173,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -182,7 +182,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -229,19 +229,19 @@
       <div class="footer__menu">
         <h3>Menú</h3>
         <ul>
-          <li><a href="/">
+          <li><a href="/globalizacion-semestral/">
               Inicio
             </a></li>
-          <li><a href="/nosotros.html">
+          <li><a href="/globalizacion-semestral/nosotros.html">
               Nosotros
             </a></li>
-          <li><a href="/productos.html">
+          <li><a href="/globalizacion-semestral/productos.html">
               Productos
             </a></li>
-          <li><a href="/blog.html">
+          <li><a href="/globalizacion-semestral/blog.html">
               Blog
             </a></li>
-          <li><a href="/contacto.html">
+          <li><a href="/globalizacion-semestral/contacto.html">
               Contáctenos
             </a></li>
         </ul>
