--- a/productos/Producto_4(Iphone).html
+++ b/productos/Producto_4(Iphone).html
@@ -24,19 +24,19 @@
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
-        <li><a href="/">
+        <li><a href="/globalizacion-semestral/">
             Inicio
           </a></li>
-        <li><a href="/nosotros.html">
+        <li><a href="/globalizacion-semestral/nosotros.html">
             Nosotros
           </a></li>
-        <li><a href="/productos.html">
+        <li><a href="/globalizacion-semestral/productos.html">
             Productos
           </a></li>
-        <li><a href="/blog.html">
+        <li><a href="/globalizacion-semestral/blog.html">
             Blog
           </a></li>
-        <li><a href="/contacto.html">
+        <li><a href="/globalizacion-semestral/contacto.html">
             Contáctenos
           </a></li>
       </ul>
@@ -80,7 +80,7 @@
         <div class="slick-track" id="track">
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -89,7 +89,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -98,7 +98,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -107,7 +107,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -116,7 +116,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -125,7 +125,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -134,7 +134,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_4(Iphone).html">
+              <a href="/globalizacion-semestral/productos/Producto_4(Iphone).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/1.jpeg" alt="Image">
                 </picture>
@@ -143,7 +143,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_5(nintendo).html">
+              <a href="/globalizacion-semestral/productos/Producto_5(nintendo).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/2.jpeg" alt="Image">
                 </picture>
@@ -152,7 +152,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_1(Audifonos).html">
+              <a href="/globalizacion-semestral/productos/Producto_1(Audifonos).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/3.jpeg" alt="Image">
                 </picture>
@@ -161,7 +161,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_2(samsumg).html">
+              <a href="/globalizacion-semestral/productos/Producto_2(samsumg).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/4.jpeg" alt="Image">
                 </picture>
@@ -170,7 +170,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_3(PS4).html">
+              <a href="/globalizacion-semestral/productos/Producto_3(PS4).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/5.jpeg" alt="Image">
                 </picture>
@@ -179,7 +179,7 @@
           </div>
           <div class="slick">
             <div>
-              <a href="/productos/Producto_6(Laptop).html">
+              <a href="/globalizacion-semestral/productos/Producto_6(Laptop).html">
                 <picture>
                   <img src="/globalizacion-semestral/assets/img/productos/6.jpeg" alt="Image">
                 </picture>
@@ -226,19 +226,19 @@
       <div class="footer__menu">
         <h3>Menú</h3>
         <ul>
-          <li><a href="/">
+          <li><a href="/globalizacion-semestral/">
               Inicio
             </a></li>
-          <li><a href="/nosotros.html">
+          <li><a href="/globalizacion-semestral/nosotros.html">
               Nosotros
             </a></li>
-          <li><a href="/productos.html">
+          <li><a href="/globalizacion-semestral/productos.html">
               Productos
             </a></li>
-          <li><a href="/blog.html">
+          <li><a href="/globalizacion-semestral/blog.html">
               Blog
             </a></li>
-          <li><a href="/contacto.html">
+          <li><a href="/globalizacion-semestral/contacto.html">
               Contáctenos
             </a></li>
         </ul>
