--- a/contacto.html
+++ b/contacto.html
@@ -26,16 +26,16 @@
         <h2>PIXELSGAMEPTY</h2>
       </div>
       <ul class="header__menu">
-        <li><a href="/">
+        <li><a href="/globalizacion-semestral/">
             Inicio
           </a></li>
-        <li><a href="/nosotros.html">
+        <li><a href="/globalizacion-semestral/nosotros.html">
             Nosotros
           </a></li>
-        <li><a href="/productos.html">
+        <li><a href="/globalizacion-semestral/productos.html">
             Productos
           </a></li>
-        <li><a href="/blog.html">
+        <li><a href="/globalizacion-semestral/blog.html">
             Blog
           </a></li>
         <li><a class='active' href="/contacto.html">
@@ -121,16 +121,16 @@
       <div class="footer__menu">
         <h3>Menú</h3>
         <ul>
-          <li><a href="/">
+          <li><a href="/globalizacion-semestral/">
               Inicio
             </a></li>
-          <li><a href="/nosotros.html">
+          <li><a href="/globalizacion-semestral/nosotros.html">
               Nosotros
             </a></li>
-          <li><a href="/productos.html">
+          <li><a href="/globalizacion-semestral/productos.html">
               Productos
             </a></li>
-          <li><a href="/blog.html">
+          <li><a href="/globalizacion-semestral/blog.html">
               Blog
             </a></li>
           <li><a class='active' href="/contacto.html">
